--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  background: linear-gradient(to bottom, #005bbb, #ffd500) fixed;
+  /* background: linear-gradient(to bottom, #005bbb, #ffd500) fixed; */
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
