--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,8 +1,15 @@
-.header {
+.container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
+  width: 1240px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.header {
   height: 60px;
 
   background-color: rgb(32, 38, 72);
