--- a/src/components/FilterType/FilterType.module.css
+++ b/src/components/FilterType/FilterType.module.css
@@ -1,12 +1,35 @@
 .wrapper {
   display: flex;
   gap: 10px;
+  align-items: center;
   margin-bottom: 20px;
 }
 
 .btnGroup {
   display: flex;
-  gap: 10px;
+  gap: 15px;
 }
 
-/* .btn{} */
+.btn {
+  padding: 7px 14px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(188, 202, 202);
+
+  cursor: pointer;
+
+  transition: 250ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    box-shadow: 2px 2px 10px 2px rgb(149, 144, 144);
+    color: white;
+    background-color: rgb(57, 57, 182);
+  }
+}
+
+.active {
+  composes: btn;
+  color: white;
+  background-color: rgb(57, 57, 182);
+}
