--- a/src/components/ProjectsList/ProjectsList.module.css
+++ b/src/components/ProjectsList/ProjectsList.module.css
@@ -34,3 +34,15 @@
     transform: scale(1.03);
   }
 }
+
+.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  padding: 10px;
+
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #3e324a;
+}
