--- a/src/components/ProjectsList/ProjectsList.module.css
+++ b/src/components/ProjectsList/ProjectsList.module.css
@@ -5,10 +5,13 @@
 }
 
 .title {
+  margin-bottom: 30px;
   font-size: 40px;
   font-weight: 700;
+  letter-spacing: 0.1em;
   text-align: center;
-  margin-bottom: 30px;
+  color: #3e324a;
+  text-shadow: 1px 1px 5px rgb(237, 223, 223);
 }
 
 .list {
