--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -5,6 +5,7 @@
 }
 
 .wrapper {
+  position: relative;
   padding: 50px;
   border: 5px solid rgb(74, 11, 11);
   border-radius: 10px;
@@ -69,4 +70,10 @@
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 10px;
+}
+
+.backLink {
+  position: absolute;
+  top: -20px;
+  left: 0;
 }
