--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 1240px;
-  margin: 30px auto;
+  margin: 0 auto;
   padding: 30px 20px;
 }
 
@@ -16,10 +16,37 @@
 
 .wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
   padding: 50px;
   border: 5px solid rgb(74, 11, 11);
   border-radius: 10px;
   box-shadow: 10px 10px 40px 10px black;
   color: #3e324a;
   background-color: rgb(197, 208, 226);
+}
+
+.contact {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+
+  width: 800px;
+  margin: 0 auto;
+  background-color: aliceblue;
+  border-radius: 10px;
+  padding: 10px 20px;
+
+  font-size: 30px;
+  font-weight: 500;
+  color: #3e324a;
+  letter-spacing: 0.05em;
+
+  transition: 250ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    box-shadow: 2px 2px 10px 5px #3e324a;
+  }
 }
