add some new styles

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,19 @@
 .layout {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+
+  min-height: 100vh;
+
+  background-color: rgb(36, 36, 113);
+}
+
+header {
+  height: 60px;
+
+  background-color: rgb(22, 28, 65);
+  color: white;
+}
+
+main {
+  flex-grow: 1;
 }
