--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -8,23 +8,21 @@
   margin-bottom: 30px;
   font-size: 40px;
   font-weight: 700;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.2em;
   text-align: center;
-  color: #3e324a;
-  text-shadow: 1px 1px 5px rgb(237, 223, 223);
+  color: aliceblue;
+
+  user-select: none;
 }
 
 .wrapper {
-  position: relative;
   display: flex;
   flex-direction: column;
   row-gap: 30px;
   padding: 50px;
-  border: 5px solid rgb(74, 11, 11);
   border-radius: 10px;
   box-shadow: 10px 10px 40px 8px black;
   color: #3e324a;
-  background-color: rgb(197, 208, 226);
 }
 
 .contact {
@@ -34,19 +32,20 @@
 
   width: 800px;
   margin: 0 auto;
-  background-color: aliceblue;
+  background-color: rgb(196, 214, 229);
   border-radius: 10px;
   padding: 10px 20px;
+  box-shadow: 2px 2px 15px 10px #071b26;
 
   font-size: 30px;
   font-weight: 500;
   color: #3e324a;
   letter-spacing: 0.05em;
 
-  transition: 250ms ease-in-out;
+  transition: 200ms ease-in-out;
 
   &:hover,
   &:focus {
-    box-shadow: 2px 2px 10px 5px #3e324a;
+    box-shadow: none;
   }
 }
