--- a/src/components/FilterType/FilterType.module.css
+++ b/src/components/FilterType/FilterType.module.css
@@ -8,7 +8,7 @@
 .text {
   font-size: 18px;
   font-weight: 700;
-  color: #3e324a;
+  color: aliceblue;
 }
 
 .btnGroup {
@@ -28,14 +28,14 @@
 
   &:hover,
   &:focus {
-    box-shadow: 2px 2px 10px 2px rgb(149, 144, 144);
     color: white;
-    background-color: #3e324a;
+    background-color: #3d7593;
   }
 }
 
 .active {
   composes: btn;
   color: white;
-  background-color: #3e324a;
+  box-shadow: 1px 1px 10px 2px rgb(92, 92, 166);
+  background-color: #124560;
 }
