--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,6 +5,8 @@
   justify-content: center;
 
   height: 100px;
-  background-color: rgb(19, 20, 20);
+  border-top: 2px solid #0889ce;
+
+  background-color: #071b26;
   color: white;
 }
