--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -7,11 +7,9 @@
 .wrapper {
   position: relative;
   padding: 50px;
-  border: 5px solid rgb(74, 11, 11);
   border-radius: 10px;
   box-shadow: 10px 10px 40px 10px black;
-  color: #3e324a;
-  background-color: rgb(197, 208, 226);
+  color: aliceblue;
 }
 
 .title {
@@ -20,8 +18,7 @@
   font-weight: 700;
   letter-spacing: 0.1em;
   text-align: center;
-  color: #3e324a;
-  text-shadow: 1px 1px 5px rgb(237, 223, 223);
+  color: aliceblue;
 }
 
 .box {
