--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,19 +1,42 @@
 .container {
-  width: 500px;
-  /* outline: 2px solid red; */
-  padding: 20px;
+  max-width: 480px;
+  padding: 10px;
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+    padding: 15px;
+  }
+
+  @media (min-width: 1200px) {
+  }
 }
 
 .title {
   text-align: center;
-  font-size: 28px;
+  font-size: 22px;
   margin-bottom: 10px;
   color: aliceblue;
+
+  @media (min-width: 768px) {
+    font-size: 24px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 28px;
+  }
 }
 
 .text {
   text-align: justify;
-  font-size: 24px;
+  font-size: 20px;
   font-family: 'Helvetica';
   color: rgb(204, 213, 221);
+
+  @media (min-width: 768px) {
+    font-size: 22px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 24px;
+  }
 }
