--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -18,3 +18,51 @@ main {
 
   background: linear-gradient(180deg, #071b26, #10508d);
 }
+
+/* Styles for HomePage */
+
+.container {
+  max-width: 480px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 1240px;
+  }
+}
+
+.title {
+  color: aliceblue;
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+
+  @media (min-width: 768px) {
+    padding: 25px;
+    font-size: 32px;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 50px;
+    font-size: 50px;
+  }
+}
+
+.wrapper {
+  margin-top: auto;
+  margin-bottom: auto;
+
+  @media (min-width: 768px) {
+  }
+
+  @media (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+}
