--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,33 +1,68 @@
 .container {
-  width: 500px;
-  /* outline: 2px solid red; */
-  padding: 20px;
+  max-width: 480px;
+  padding: 10px;
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+    padding: 15px;
+  }
+
+  @media (min-width: 1200px) {
+  }
 }
 
 .title {
   text-align: center;
-  font-size: 28px;
+  font-size: 22px;
   margin-bottom: 10px;
   color: aliceblue;
+
+  @media (min-width: 768px) {
+    font-size: 24px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 28px;
+  }
 }
 
 .list {
   display: flex;
   flex-wrap: wrap;
+  gap: 5px;
+  justify-content: center;
 }
 
 .item {
   object-fit: contain;
-  max-width: 100px;
-  min-width: 100px;
-  padding: 20px;
-  margin: 20px;
-  max-height: 100px;
+  max-width: 60px;
+  min-width: 60px;
+  padding: 10px;
+  margin: 10px;
+  max-height: 60px;
+  min-height: 60px;
   border-radius: 36px;
-  min-height: 100px;
   width: 100%;
   height: auto;
   background: rgb(255, 255, 255);
 
   box-shadow: 2px 2px 15px 5px grey;
+
+  @media (min-width: 768px) {
+    max-width: 80px;
+    min-width: 80px;
+    padding: 20px;
+    margin: 20px;
+    max-height: 80px;
+    min-height: 80px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 100px;
+    min-width: 100px;
+    padding: 20px;
+    margin: 20px;
+    max-height: 100px;
+    min-height: 100px;
+  }
 }
