--- a/src/components/ProjectsList/ProjectsList.module.css
+++ b/src/components/ProjectsList/ProjectsList.module.css
@@ -28,7 +28,7 @@
   }
 
   @media (min-width: 1200px) {
-    font-size: 40px;
+    font-size: 38px;
   }
 }
 
@@ -50,7 +50,7 @@
   width: 100%;
   margin-bottom: 30px;
 
-  border: 2px solid rgb(194, 194, 217);
+  border: 2px solid #c2c2d9;
   border-radius: 10px;
   box-shadow: 2px 2px 10px 5px grey;
   overflow: hidden;
@@ -89,6 +89,7 @@
   height: 40px;
   padding: 10px;
 
+  border-top: 2px solid #c2c2d9;
   font-size: 20px;
   color: aliceblue;
   background-color: #124560;
