--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -1,58 +1,117 @@
 .container {
-  width: 1240px;
+  max-width: 480px;
   margin: 0 auto;
-  padding: 30px 20px;
+  padding: 20px 20px;
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 1240px;
+  }
 }
 
 .wrapper {
   position: relative;
-  padding: 50px;
+  padding: 15px;
   border-radius: 10px;
   box-shadow: 10px 10px 40px 10px black;
   color: aliceblue;
+
+  @media (min-width: 768px) {
+    padding: 30px;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 50px;
+  }
 }
 
 .title {
   margin-bottom: 30px;
-  font-size: 40px;
+  font-size: 28px;
   font-weight: 700;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.2em;
   text-align: center;
   color: aliceblue;
+
+  user-select: none;
+
+  @media (min-width: 768px) {
+    margin-bottom: 25px;
+    font-size: 30px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 36px;
+  }
 }
 
 .box {
-  display: flex;
-  gap: 50px;
-  margin-bottom: 30px;
+  width: 100%;
+  margin-bottom: 20px;
+
+  @media (min-width: 768px) {
+    display: flex;
+    gap: 65px;
+    margin-bottom: 25px;
+  }
+
+  @media (min-width: 1200px) {
+    gap: 165px;
+  }
 }
 
 .image {
+  display: block;
+  width: 100%;
+  height: 250px;
+  margin-bottom: 20px;
+  object-fit: cover;
+
   border-radius: 10px;
-  box-shadow: 2px 2px 10px 5px #3e324a;
+  box-shadow: 2px 2px 10px 5px #071b26;
+
+  @media (min-width: 768px) {
+    width: 400px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 1200px) {
+    width: 600px;
+    height: 350px;
+  }
 }
 
 .linkWrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 40px;
-  width: 100%;
+  gap: 15px;
+
+  @media (min-width: 768px) {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  @media (min-width: 1200px) {
+    gap: 50px;
+  }
 }
 
 .link {
   display: flex;
   align-items: center;
-  gap: 20px;
-  padding: 20px;
-  width: 250px;
+  gap: 10px;
+  padding: 10px;
+  height: 70px;
+  width: 100%;
 
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
-  border: 2px solid #3e324a;
   border-radius: 10px;
-  box-shadow: 2px 2px 10px 5px #3e324a;
+  box-shadow: 2px 2px 10px 5px #071b26;
   background-color: aliceblue;
 
   transition: 250ms ease-in-out;
@@ -61,12 +120,44 @@
   &:focus {
     transform: scale(1.05);
   }
+
+  @media (min-width: 1200px) {
+    gap: 20px;
+    padding: 20px;
+    width: 250px;
+    height: 90px;
+
+    font-size: 25px;
+  }
 }
 
 .text {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 25px;
+    font-size: 22px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 30px;
+  }
+}
+
+.span {
+  font-size: 22px;
+  font-weight: 700;
+  color: #64ccee;
+
+  @media (min-width: 768px) {
+    font-size: 24px;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 32px;
+  }
 }
 
 .backLink {
