--- a/src/components/FilterType/FilterType.module.css
+++ b/src/components/FilterType/FilterType.module.css
@@ -27,7 +27,7 @@
 
   cursor: pointer;
 
-  transition: 250ms ease-in-out;
+  transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
 
   &:hover,
   &:focus {
