--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -14,7 +14,7 @@
     color: salmon;
   }
 
-  transition: 250ms ease-in-out;
+  transition: filter 250ms ease-in-out, transform 250ms ease-in-out;
 
   &:hover {
     filter: brightness(0.5);
