--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -113,7 +113,7 @@
   box-shadow: 2px 2px 10px 5px #071b26;
   background-color: aliceblue;
 
-  transition: 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
 
   &:hover,
   &:focus {
