--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -8,6 +8,7 @@
   padding: 15px 7px;
   font-size: 20px;
   color: white;
+  user-select: none;
 
   &:global(.active) {
     text-decoration: underline;
